--- a/src/app.css
+++ b/src/app.css
@@ -22,13 +22,14 @@ html {
 }
 
 .card {
-    background: rgba(37, 37, 37, 0.9);
-    width: 40%;
-    width: 40%;
-    max-height: 20%;
+    background: rgba(37, 37, 37, 0.4);
+    max-height: 60%;
+    max-width: 80%;
+    
     display: flex;
     align-items: center;
     flex-direction: column;
+    
     border-radius: 25px;
     padding: 2%;
     -webkit-box-shadow: 18px 16px 10px 4px rgba(0, 0, 0, 0.75);
@@ -39,7 +40,8 @@ html {
 .header {
     display: flex;
     align-items: center;
-    height: 600px;
+    height: 90%;
+    padding: 1rem;
     font-size: 2rem;
     color: rgb(223, 223, 223);
 }
@@ -77,20 +79,21 @@ button {
 .footer {
     position: absolute;
     bottom: 10px;
+    right: 10px;
     color: #fff;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
     .card {
         width: 80%;
-        max-height: 80%;
-        background-color: rgba(255, 255, 255, 0.3);
+        height: 80%;
+        background-color: rgba(0, 0, 0, 0.3);
     }
 
     .header {
         align-items: center;
         font-size: 1.5rem;
-        color: #232529;
+        color: #eef1f8;
         padding: 10px;
     }
 }
